fixed bug: horizontal scrollbar is never displayed nor needed

--- a/frontend/labelr/src/App.css
+++ b/frontend/labelr/src/App.css
@@ -1,7 +1,8 @@
-body{
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 .App {
@@ -9,4 +10,3 @@ body{
   height: 100vh;
   width: 100vw;
 }
-
